[package]
name = "jenga"
version = "0.1.0"
edition = "2021"

[features]
rate_limit = []
retry = []
restart = []
retry_wait = ["dep:tokio"]
timeout = ["dep:tokio"]

[dependencies]
thiserror = "2"
tokio = { version = "1", optional = true, features = ["rt", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
