[package]
name = "jenga"
version = "0.1.0"
edition = "2021"

[features]
rate_limit = []
retry = []
restart = ["tokio/sync"]
retry_wait = ["tokio/time"]
timeout = ["tokio/time"]

[dependencies]
thiserror = "2"
tokio = { version = "1", optional = true, default_features = false }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
